# autocoin

./: .env.example  .gitignore  .mcp.json  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONFIG_SETUP.md  Cargo.toml  LICENSE  README.md  TESTING_ISSUES.md  WEBSOCKET_FIX.md  WEBSOCKET_FIX_GUIDE.md  WEBSOCKET_SUMMARY.md  build_and_test.bat  config.toml  http_test.js  requirements.txt  run.sh  web_test.js
.claude/: settings.json
.claude/agents/moai/: builder-agent.md  builder-command.md  builder-plugin.md  builder-skill.md  expert-backend.md  expert-chrome-extension.md  expert-debug.md  expert-devops.md  expert-frontend.md  expert-performance.md  expert-refactoring.md  expert-security.md  expert-testing.md  manager-ddd.md  manager-docs.md  manager-git.md  manager-project.md  manager-quality.md  manager-spec.md  manager-strategy.md
.claude/hooks/moai/: __init__.py  post_tool__ast_grep_scan.py  post_tool__code_formatter.py  post_tool__linter.py  post_tool__lsp_diagnostic.py  pre_compact__save_context.py  pre_tool__security_guard.py  quality_gate_with_lsp.py  session_end__auto_cleanup.py  session_end__rank_submit.py  session_start__show_project_info.py  stop__loop_controller.py
.claude/output-styles/moai/: alfred.md  r2d2.md  yoda.md
.claude/skills/moai-docs-generation/: SKILL.md
.moai/cache/: personalization.json
.moai/config/: config.yaml  multilingual-triggers.yaml  statusline-config.yaml
.moai/docs/: backend-architecture-TRADING-003.md
.moai/project/: product.md  structure.md  tech.md
app/: main.py
app/api/: routes.py
app/core/: config.py  state.py
app/engine/: controller.py  state.py  strategy.py
app/infra/: repository.py  upbit_client.py
app/schemas/: dto.py
app/static/: app.css  app.js
app/templates/: dashboard.html
config/: strategy.toml
docs/: ARCHITECTURE.md  TECHNICAL_DESIGN.md
src/: diagnose_websocket.rs  lib.rs  main.rs  test_websocket.rs
src/agents/: decision_maker.rs  executor.rs  market_monitor.rs  mod.rs  notification.rs  risk_manager.rs  signal_detector.rs
src/backtest/: metrics.rs  mod.rs  optimizer.rs  simulator.rs
src/config/: mod.rs
src/dashboard/: colors.rs  layout.rs  mod.rs  renderer.rs  widgets.rs
src/db/: mod.rs  models.rs  schema.rs
src/discord/: mod.rs  webhook.rs
src/error/: mod.rs
src/execution/: mod.rs  service.rs  watchdog.rs
src/historical/: cache.rs  fetcher.rs  mod.rs
src/indicators/: bollinger.rs  macd.rs  mod.rs  moving_average.rs  rsi.rs
src/strategy/: mod.rs  momentum.rs  multi_indicator.rs  strategy_manager.rs
src/types/: mod.rs  trading.rs
src/upbit/: client.rs  mod.rs  models.rs  websocket.rs
src/web/: handlers.rs  mod.rs  routes.rs  server.rs  state.rs  websocket.rs
tests/: test_api.py  test_engine_api.py  test_engine_controller.py
tests/integration/: api_test.rs  trading_flow_test.rs
tests/unit/: risk_test.rs  signal_test.rs
web/: .env.example  .eslintrc.json  README.md  dashboard.html  next.config.ts  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/hooks/: useWebSocketClient.ts
web/lib/: api-client.ts  api-settings.ts  api.ts  formatters.ts  types.ts  utils.ts
web/types/: dashboard.ts  markets.ts  settings.ts
(+546 files in other folders)
